mksc/testcases/compile/fail/class_5.mks
# compile fail
# dupricate method
class A
	def class.method()
	end

	def class.method()
	end
end
